# mixolumia-mod-installer

./: .gitignore  Cargo.toml  README.md  build.rs  mac_build.sh
src/: data.rs  lib.rs  mac_lib.rs  main.rs  texture.rs  windows.rs
xcode_project/Mixolumia Mod Installer/: AppDelegate.swift  Document.swift  Info.plist
xcode_project/Mixolumia Mod Installer.xcodeproj/: project.pbxproj
xcode_project/Mixolumia Mod Installer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode_project/Mixolumia Mod Installer/Assets.xcassets/AppIcon.appiconset/: Contents.json
xcode_project/Mixolumia Mod Installer/Base.lproj/: Main.storyboard
