[package]
name = "mixolumia_mod_installer"
version = "0.1.0"
authors = ["maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2018"
description = "A mod installer for Mixolumia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mod_installer"
crate-type = ["staticlib", "cdylib"]

[dependencies]
configparser = "1.0.0"
zip = "0.5.6"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "std", "shellapi"] }
winreg = "0.7.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.bundle]
identifier = "io.github.maddymakesgames.MixolumiaModInstaller"
icon = ["icon.ico"]
version = "0.2"
